--- a/解题方法论.md
+++ b/解题方法论.md
@@ -641,14 +641,13 @@ class Solution:
 
 3. 初始化
 
-4. 遍历顺序     先物后背，谐音**吾辈**当自强    求排列（特例，先背后物）
+4. 遍历顺序     先物后背（谐音**吾辈**当自强）        求排列是特例，先物品后背包
 
 5. 举例推导数组    
 
 - 背包问题tips：
   - 背包容量从0开始
   - 一维dp    01背包时内层倒序，避免重复；完全背包时内层正序，需要重复取。
-  - 求排列是特例，先物品后背包
 
 ### 2. 01背包
 
