--- a/高频题.md
+++ b/高频题.md
@@ -222,10 +222,8 @@ return dp[target]
 
 2. 递推公式  dp[i] 依赖于  0<=j<i  dp[j]=True 且s[j:i]出现在wordDict，则dp[i]=True
 
-   dp[j] 代表s[0]~s[j-1],即s[0:j]
-   dp[i]代表s[0]~s[i-1],即s[0:i]
-   故dp[j] ->dp[i]中间的字符串是 s[j:i]
-
+   dp[j] 代表前j个元素,即s[0:j]，dp[i]代表前i个元素,即s[0:i]，故dp[j] ->dp[i]中间的字符串是 s[j:i]
+   
 3. 初始化   dp[0]=True
 
 4. 顺序    求排列，故顺序特殊  先背包后物品
@@ -237,7 +235,7 @@ dp[0]=True # 空字符True
 for i in range(1,len(s)+1):  # 背包容量 1~n
     for j in range(i): # 物品j  0~i-1  
         #判断当前是否拼出
-        if dp[j] and s[j:i] in wordDict: # 如果 s[0:j] 可以被拆分成单词，并且 s[j:i] 在单词集合中存在，则 s[0:i] 可以被拆分成单词
+        if dp[j] and s[j:i] in wordDict: # 如果dp[j]能拼成，且s[j:i] 在单词集合中存在，则 s[0:i] 可以被拆分成单词
             dp[i]=True
             break
 return dp[-1]
@@ -332,17 +330,17 @@ class Solution:
 class Solution:
     def longestPalindrome(self, s: str) -> str:
         # 奇数串  偶数串
-        def expand(left,right,s):
+        def expand(s,left,right):
             # 合法区间内往外拓展 找最长子串
             while left>=0 and right<len(s) and s[left]==s[right]:
                 left-=1
                 right+=1
-            return s[left+1:right] # while终止时回文子串区间left+1 ~ right-1 左开右闭
+            return s[left+1:right] # while终止时回文子串区间left+1 ~ right-1 左闭右开
         
         long_str=""
         for i in range(len(s)):
-            odd_str= expand(i,i,s)  # 以 s[i] 为中心的最长回文子串
-            even_str=expand(i,i+1,s) # 以 s[i] 和 s[i+1] 为中心的最长回文子串
+            odd_str= expand(s,i,i)  # 以 s[i] 为中心的最长回文子串
+            even_str=expand(s,i,i+1) # 以 s[i] 和 s[i+1] 为中心的最长回文子串
             long_str = max(long_str,odd_str,even_str,key=len)
         return long_str
 ```
@@ -391,7 +389,7 @@ class Solution:
 
 [Links](https://www.programmercarl.com/0300.%E6%9C%80%E9%95%BF%E4%B8%8A%E5%8D%87%E5%AD%90%E5%BA%8F%E5%88%97.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
-1. dp定义: dp[i]表示**0~i-1范围**且**nums[i-1]结尾**的最长递增子序列的长度。 i取值0~n-1，对应元素nums[0]~nums[n-1]
+1. dp定义: dp[i]表示**以第i个元素结尾**的最长递增子序列的长度。 i取值0~n-1，对应元素nums[i]
 2. 递推公式：dp[i]依赖  nums[i]>nums[j]时max(dp[i],dp[j]+1)    j取值0~i-1
 3. 初始化：每一个i，dp[i]起始大小至少都是1
 
