--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -19,8 +19,8 @@
 
 思路：
 
-1. 统计每个字符的最后出现位置
-2. 从头遍历字符，并更新字符的最远出现下标，如果找到字符最远出现位置下标和当前下标相等了，则找到了分割点
+1. 第一次遍历，统计每个字符的最后出现位置
+2. 第二次遍历，每次更新字符的最远出现下标，如果找到字符最远出现位置下标和当前下标相等了，则找到了分割点
 
 ### 4. 合并区间:  合并所有重叠的区间，并返回不重叠的区间数组
 
@@ -29,21 +29,19 @@
 1. 排序：按照子数组的第一个元素排序 
 2. 合并：按照第二个元素合并。 分3种情况  不重叠、重叠、包含
 
-​         pre_left,pre_right =result[-1]
-
-​         cur_left,cur_right=intervals[i]
+   ```python
+   pre_left,pre_right = result[-1]  # 结果里的最后一个区间
+   cur_left,cur_right = intervals[i] # 当前区间
+   ```
 
 ### 5. 最大子数组的和
 
 思路：  
 
 1. 更新当前的前缀和 
-
-如果之前>0，则有益  更新为prefix+当前值。
-
-如果之前<0，则有害  重置为当前值
-
-1. 更新当前的最大值  
+   - 如果之前>0，则有益  更新为prefix+当前值。
+   - 如果之前<0，则有害  重置为当前值
+2. 更新当前的最大值  
 
 ### 6. 无重复字符的最长子串
 
@@ -57,9 +55,7 @@
 
 思路： 用前缀和+哈希表
 
-哈希表{前缀和：出现次数}
-
-如果 （当前前缀和−k 的区间和j ）在哈希表，则总次数 累加上map[j]的值
+哈希表{前缀和：出现次数}，如果 （当前前缀和−k 的区间和j ）在哈希表，则总次数 累加上map[j]的值
 
 ### 9. 翻转字符串里的单词 
 
@@ -83,10 +79,11 @@
 
 1. 交换：遍历到下标i,  如果对应值在1~n范围内，且与下标不匹配，则持续交换。   
 
-- 交换的终止条件是 即将交换的位置已经有匹配元素。
--  必须理清 当前下标、当前值、交换下标、交换值。 下标嵌套，交换前下标不得嵌套
+   - 交换的终止条件是 即将交换的位置已经有匹配元素。
 
-1. 遍历：第一个与下标不匹配的元素即为缺失正整数
+   -  必须理清 当前下标、当前值、交换下标、交换值。 下标嵌套，交换前下标不得嵌套
+
+2. 遍历：第一个与下标不匹配的元素即为缺失正整数
 
 ### 13. 图像顺时针旋转90°  
 
@@ -97,8 +94,6 @@
 ### 1. 搜索二维矩阵
 
 思路： 坐标映射到一维，进行二分查找
-
-
 
 ## 排序
 
@@ -160,7 +155,7 @@
 
 ### 3. 每日温度
 
-Xxxx
+xxx
 
 ## 二叉树
 
@@ -236,19 +231,18 @@ dp[i]= max(dp[i-2]+nums[i], dp[i-1])
 
 #### 3. 乘积最大子数组，元素有正有负
 
-思路：
+思路：因为元素存在负数，导致最大值 最小值相互转换，所以同时维护两个dp_max   dp_min
 
 1. dp定义   第 i 个元素结尾的乘积最大子数组的乘积
 
-​         因为元素存在负数，导致最大值 最小值相互转换，所以同时维护两个dp_max   dp_min
+2. 公式   
 
-1. 公式   
+   ```python
+   dp_max[i] = max( nums[i], dp_max[i-1]*num[i], dp_min[i-1]*num[i]) 
+   dp_min[i] = min(nums[i], dp_max[i-1]*num[i], dp_min[i-1]*num[i] )
+   ```
 
-​        dp_max[i]= max( nums[i],   dp_max[i-1]*num[i],  dp_min[i-1]*num[i]) 
-
-​        dp_min[i] = min(nums[i],   dp_max[i-1]*num[i],   dp_min[i-1]*num[i] )
-
-
+   
 
 ### 背包问题
 
@@ -288,10 +282,9 @@ dp[i]= max(dp[i-2]+nums[i], dp[i-1])
 
 1. dp定义   dp[i][j] word1前i个元素、word2前j个元素的最少次数
 2. 递推公式  
+   - 当前元素相同，则不操作  `dp[i][j]=dp[i-1][j-1]`
+   - 不同，则 增加、删除、修改,选最少次数
 
-​       当前元素相同，则不操作  dp[i][j]=dp[i-1][j-1]
-
-​       不同，则 增加、删除、修改,选最少次数
 
 
 
