--- a/解题方法论.md
+++ b/解题方法论.md
@@ -12,7 +12,7 @@
 
 ### 2. 查找算法
 
-#### 二分查找
+#### 二分查找（双闭区间）
 
 - 时间复杂度O(logn)     
 - 如果没有，**left**指向目标被插入的位置
@@ -24,7 +24,7 @@ def binary_search(nums, target):
     left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
     while left <= right: # 双闭区间左右边界也要比较 
         mid = (left + right) // 2
-        # 不要else 必须所有情况列出来
+        # 必须列出所有情况
         if nums[mid] < target: 
             left = mid + 1  
         elif nums[mid] > target:
@@ -73,11 +73,23 @@ def search(nums, target) -> int:
 [4, 5, 6, 7, 0, 1, 2]
 
 - 搜索目标值：根据左右区间的有序性和目标值范围调整指针
-- 寻找最小值：只需比较中点与右端点
 
-##### 4. 寻找两个正序数组的中位数❓
+  比较==左端点left==和==中点mid==
 
+  1. 判断哪个区间有序或已达边界   
+  2. 判断是否在有序区间内，否则在无序区间。无法判断则left+1继续
+     1. nums[left] <  nums[mid]     
+     2. nums[left] >   nums[mid]  
+     3. nums[left] ==   nums[mid]  到达左边界，无法判断。left+=1
 
+- 寻找最小值：
+
+  思路：只需比较中点mid与==右端点right==
+
+  1. mid >right, 最小值在右区间
+  2. mid<=right  最小值在左区间或中点
+
+  
 
 ### 3. 排序算法
 
@@ -111,12 +123,13 @@ def quicksort(nums, left, right):
     :param left: 排序的起始索引
     :param right: 排序的结束索引
     """
-    # 终止条件   等号不需要排序
+    # 终止条件  等号不需要排序
     if left >= right:
       	return 
-    base_index = swap(nums, left, right) # 分区，返回基准值对应下标 
-    quicksort(nums, left, base_index - 1)  # 左区间排序
-    quicksort(nums, base_index + 1, right)  # 右区间排序
+    # 单层递归逻辑   先分区，再排序左右区间
+    base_index = swap(nums, left, right) # 返回基准值下标 
+    quicksort(nums, left, base_index - 1)  
+    quicksort(nums, base_index + 1, right) 
 ```
 
 #### 堆排序Heap
@@ -130,7 +143,7 @@ def quicksort(nums, left, right):
    2. 终止条件 （1）当前为叶子节点 （2）当前非叶子节点，但相比左右孩子已是最大值，无需交换
 
       ```python
-      left,right=2* i+1, 2*i+2  # 左右孩子下标
+      left,right=2*i+1, 2*i+2  # 左右孩子下标
       ```
 
    3. 单层递归逻辑：当前值 与最大值交换，继续向下堆化
@@ -146,18 +159,17 @@ def quicksort(nums, left, right):
    1. 交换堆顶和堆底元素 
    2.  堆长度-1，堆顶执行堆化
 
-- tips:
+- tips:  大小顶堆唯一区别是堆化时比较当前节点 > or <孩子。 
 
-  (1)大小顶堆唯一区别是堆化时比较当前节点 > or <孩子。 
 
 详见 [高频题-查找数组第K大的元素](高频题.md)
 
-### 4. 滑动窗口
+### 4. 滑动窗口（左闭右开）
 
-#### 滑动窗口三步骤
+#### 滑动窗口明确三个事
 
 - 什么时候扩大窗口？
-- 什么时候缩小窗口？
+- 什么时候收缩窗口？
 - 什么时候更新答案？
 
 #### 1. 解题2步骤
@@ -170,15 +182,15 @@ def quicksort(nums, left, right):
 
    （3）记录结果参数
 
-2. 遍历字符串 right<len(s)   right是即将遍历的下标
+2. 遍历字符串 `right<len(s)`   right是即将遍历的下标
 
-   （1）判断当前元素 更新窗口、标识符，同时扩大右边界
+   （1）判断当前元素，是否更新窗口、标识符，同时扩大右边界
 
-   （2）判断是否收缩窗口
+   （2）判断当前元素，是否收缩窗口
 
-   ​	     固定窗口判断条件  窗口已满 `if right-left>= len(子串)`
+   ​	     固定窗口  窗口已满 `if right-left>= len(子串)`
 
-   ​		 动态窗口判断条件  合法区间内满足子串条件  `while left<right and valid==len(need.keys())`
+   ​		 动态窗口  合法区间内满足子串条件  `while left<right and valid==len(need.keys())`
 
    （3）收缩两步骤  （a）记录当前结果（b）左侧窗口移出元素，同时缩小左边界
 
@@ -188,8 +200,8 @@ def minWindow(self, s: str, t: str) -> str:
     
     # 窗口参数
     window = {} 
-   	valid=0 # 单字符满足频次时+1   值等于need长度时满足条件
-  	left，right, = 0,0 # 左闭右开[left,right)   区间[0, 0)中没有元素，避免边界问题  窗口长度=right-left
+   	valid=0 # 单字符满足频次时+1
+  	left，right, = 0,0 # 左闭右开[left,right)  区间[0, 0)中没有元素，避免边界问题  窗口长度=right-left
     
     # 子串参数   
     from collections import Counter
@@ -244,7 +256,7 @@ def minWindow(self, s: str, t: str) -> str:
 
 #### 单调栈3步骤
 
-1. list模拟栈，明确 当前元素  和 栈顶元素 的><=三种情况
+1. list模拟栈，明确 当前元素  和 栈顶元素 的`> < =`三种情况
 2. 无论栈怎么改变，当前元素都要入栈
 3. 栈 存放元素下标
 
@@ -337,8 +349,8 @@ def reverse_linked_list(head):
     while cur_node:
         next_node = cur_node.next  # 1. 保存旧链表下一个节点
         cur_node.next = new_node  # 2. 将当前节点指向新链表头
-        new_node = cur_node  # 3.新链表更新表头
-        cur_node = new_node  # 4. 旧链表更新表头
+        new_node = cur_node  # 3.更新新链表表头
+        cur_node = new_node  # 4. 更新旧链表表头
     return new_node  # 返回新的头节点
 ```
 
@@ -390,6 +402,7 @@ class Solution:
         res = []
         
         def dfs(node):
+            # 终止条件 当前节点为空
             if node is None:
                 return   
             # 前序  中左右
@@ -431,20 +444,20 @@ class Solution:
         # 边界条件   空树
         if not root:
             return []
-        queue = collections.deque([root]) # deque双端队列  装入根节点
+        dq = collections.deque([root]) # deque双端队列  装入根节点
         result = []
-        while queue: # 1. 遍历每一层
+        while dq: # 1. 遍历每一层
             # 2. 遍历当前层的节点   长度划分出当前层的元素个数，for pop遍历并清空当前层元素
             level = [] 
-            nums=len(queue) # queue动态变化，必须先统计长度
+            nums=len(dq) # queue动态变化，先统计长度
             for _ in range(nums): 
-                cur = queue.popleft() 
-                level.append(cur.val)
+                cur_node = dq.popleft() 
+                level.append(cur_node.val)
                 # 3. 装入左右子树
-                if cur.left: 
-                    queue.append(cur.left)
-                if cur.right:
-                    queue.append(cur.right)
+                if cur_node.left: 
+                    dq.append(cur_node.left)
+                if cur_node.right:
+                    dq.append(cur_node.right)
             result.append(level) # 4. 保存当前层结果
         return result
 ```
@@ -460,6 +473,10 @@ class Solution:
    - 局部参数：求组合用startIndex，求排列用used
 
 2. 确定终止条件    保存结果**必须复制**
+   - 子集：`startIndex == len(nums)` 遍历完
+   - 组合： startIndex  `len(path)==len(nums)`  
+   - 切割：`startIndex == len(nums)` 遍历完
+   - 排列：`used`     满足 `len(path)==len(nums)`  
 
 3. 遍历时必须**明确**for横向遍历什么和取值范围    纵向递归遍历什么和取值范围    path存的什么）
 
@@ -637,17 +654,17 @@ class Solution:
 
 1. dp下标定义⭐️⭐️⭐️       明确下标 i 取值范围、总长度，以及对应元素的取值范围
 
-2. 递推公式      更新依赖于哪些因素
+2. 递推公式      更新依赖于哪些变量
 
 3. 初始化
 
-4. 遍历顺序     先物后背（谐音**吾辈**当自强）        求排列是特例，先物品后背包
+4. 遍历顺序     先物后背（谐音**吾辈**当自强）       ==特例是排列==先物品后背包
 
 5. 举例推导数组    
 
 - 背包问题tips：
   - 背包容量从0开始
-  - 一维dp    01背包时内层倒序，避免重复；完全背包时内层正序，需要重复取。
+  - 一维dp    01背包时内层倒序，避免重复；完全背包时内层正序，需要重复。
 
 ### 2. 01背包
 
@@ -730,7 +747,7 @@ return dp[target_sum]
 
 ### 3. 完全背包
 
-唯一区别  **内层正序遍历**，保证物品重复放入
+唯一区别  **内层正序遍历**，保证物品重复取
 
 ##### 1. 无限取的背包最大价值
 
@@ -761,7 +778,7 @@ for j in range(1,n+1): # 先背包
 return dp[n]
 ```
 
-##### 4. 求背包装满最小物品数
+##### 4. 无限取物品，求背包装满最小物品数
 
 ```python
 dp = [float('inf')] * (amount + 1)   # 求最小，故初始值无穷大
