--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -13,21 +13,21 @@
 思路：  
 
 1. k%数组长度后，得到真实翻转次数
-2. 先整体翻转、再左区间单独翻转、右区间单独翻转
+2. 整体翻转 + 左区间翻转+右区间翻转
 
-### 3. 划分字母区间：字符串划分为尽可能多的片段，同一字母只能出现在一个片段中。
+### 3. 划分字母区间：字符串划分为尽可能多的片段，同一字母只能出现在一个片段中
 
 思路：
 
-1. 第一次遍历，统计每个字符的最后出现位置
-2. 第二次遍历，每次更新字符的最远出现下标，如果找到字符最远出现位置下标和当前下标相等了，则找到了分割点
+1. 第一次遍历，统计每个字符的==最后出现位置==
+2. 第二次遍历，每步都更新当前区间内的最远下标，如果`当前下标`等于`当前区间最远下标`，则找到分割点
 
 ### 4. 合并区间:  合并所有重叠的区间，并返回不重叠的区间数组
 
 思路：
 
 1. 排序：按照子数组的第一个元素排序 
-2. 合并：按照第二个元素合并。 分3种情况  不重叠、重叠、包含
+2. 逐步合并：按照第二个元素合并，分不重叠、重叠、包含3种情况  
 
    ```python
    pre_left,pre_right = result[-1]  # 结果里的最后一个区间
@@ -45,7 +45,7 @@
 
 ### 6. 无重复字符的最长子串
 
-思路：哈希  Set集合，记录窗口内每个字符是否出现
+思路：滑动窗口，用集合set，记录窗口内每个字符是否出现
 
 ### 7. 三数之和
 
@@ -55,7 +55,7 @@
 
 思路： 用前缀和+哈希表
 
-哈希表{前缀和：出现次数}，如果 （当前前缀和−k 的区间和j ）在哈希表，则总次数 累加上map[j]的值
+哈希表{前缀和：出现次数}，如果 `当前前缀和−k的区间和j` 在哈希表，则总次数 累加上`map[j]`的值
 
 ### 9. 翻转字符串里的单词 
 
@@ -69,19 +69,20 @@
 
 （不要求序列元素在原数组中连续）      
 
-思路：每个数 判断是否为连续序列的开头。
+思路：每个数判断是否为连续序列的开头。
 
-用Set判断是否包含当前元素-1。 跳过非开头
+1. 用Set判断是否包含当前元素-1。 跳过非开头
+2. 递增 持续判断是否在集合里
 
 ### 12. 缺失的第一个正整数
 
 思路： 理想情况下 下标+1=正整数
 
-1. 交换：遍历到下标i,  如果对应值在1~n范围内，且与下标不匹配，则持续交换。   
+1. 交换：遍历到下标i,  如果值在1~n范围内，且与下标不匹配，需要持续交换。   
 
-   - 交换的终止条件是 即将交换的位置已经有匹配元素。
+   - 终止条件是 即将交换的位置已经有匹配元素。
 
-   -  必须理清 当前下标、当前值、交换下标、交换值。 下标嵌套，交换前下标不得嵌套
+   -  必须理清 当前下标、当前值、交换下标、交换值。 交换前==下标不得嵌套==
 
 2. 遍历：第一个与下标不匹配的元素即为缺失正整数
 
@@ -97,7 +98,7 @@
 
 ## 排序
 
-### 1. 数据中出现频率前 k 高的元素
+### 1. 数据中出现频率前k高的元素
 
 思路：堆排序
 
@@ -151,7 +152,7 @@
 思路：
 
 1. 遇到 [   栈存入已解码的字符串 + 即将重复的数字
-2. 遇到]   栈弹出 已解码字符串和即将重复数字，构建新字符串
+2. 遇到]   栈弹出 已解码字符串和即将重复数字，拼成新字符串
 
 ### 3. 每日温度
 
@@ -167,9 +168,14 @@ xxx
 
 思路： 递归不断拆分左右区间，构建左右子树
 
-1. 前序第一个节点 将中序拆成左右区间
-2. 用中序左区间长度 将前序业拆成左右区间
-3. 得到前序 中序的左右区间后递归即可
+递归三步骤
+
+1. 参数及返回值   输入前序、中序
+2. 终止条件   输入序列长度为空
+3. 单层递归逻辑
+   1. 前序第一个节点 将中序拆成左右区间
+   2. 用中序左区间长度 将前序业拆成左右区间
+   3. 得到前序 中序的左右区间后递归即可
 
 ## 图论
 
@@ -180,8 +186,6 @@ xxx
 ### 2. 腐烂的橘子
 
 思路：广度优先遍历BFS   因为所有橘子同时腐烂
-
-
 
 ## 回溯
 
@@ -227,7 +231,9 @@ xxx
 
 如果不偷房间i，则最多考虑0~i-1偷dp[i-1]
 
+```python
 dp[i]= max(dp[i-2]+nums[i], dp[i-1])
+```
 
 #### 3. 乘积最大子数组，元素有正有负
 
@@ -248,44 +254,20 @@ dp[i]= max(dp[i-2]+nums[i], dp[i-1])
 
 #### 1. 完全平方数：和为 n 的完全平方数的最少数量 。例如13 = 2²+3²
 
-思路：物品无限取，装满背包，即完全背包问题
+思路：完全背包、正好装满
 
-背包容量是n，物品是i  取值范围是0~√n
+背包容量是n， 物品是i  取值范围是0~√n
 
 1. dp[i]定义  和为i的最少数量
-2. 公式  dp[i]=  min(dp[i-j²] ,dp[i])    j取值范围0~√i
+2. 公式  `dp[i]=min(dp[i-j²], dp[i])`    j取值范围0~√i
 3. 初始化   因为求最小值，故dp初始化为无穷大
 
 #### 2. 分割等和子集：数组分割成两个子集，使得两个子集的元素和相等 
 
-思路： 找到集合里能够出现 sum / 2 的子集总和。即 01背包问题
+思路： 找到集合里能够出现 `sum/2` 的子集总和。01背包 + 组合问题
 
 1. dp定义  容量为j的背包，所背的物品价值最大可以为dp[j]
-2. 公式   dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
-
-### 子序列问题
-
-#### 1. 单词拆分
-
-思路：
-
-1. dp[i]定义：字符串长度为i    无法拼出为False    拼出为True
-2. 递推公式：如果dp[j]True  且s[j:i]在单词列表里，则dp[i]为True      ( j<i)
-
-#### 2. 最长递增子序列
-
-定义 dp[i] 表示0~i-1区间内以nums[i-1]结尾的最长子序列长度 
-
-#### 3. No72.最短编辑距离
-
-思路：
-
-1. dp定义   dp[i][j] word1前i个元素、word2前j个元素的最少次数
-2. 递推公式  
-   - 当前元素相同，则不操作  `dp[i][j]=dp[i-1][j-1]`
-   - 不同，则 增加、删除、修改,选最少次数
-
-
+2. 递推公式   `dp[j] = max(dp[j], dp[j - weight[i]] + value[i])`
 
 
 ## 技巧
