--- a/高频题.md
+++ b/高频题.md
@@ -6,18 +6,19 @@
 
 ### 1. 三数之和⭐️
 
-思路：（1）排序 + 左右指针  （2）基准 和 记录结果时过滤重复值
+思路：    [links](https://www.programmercarl.com/0015.%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
 
-​    [links](https://www.programmercarl.com/0015.%E4%B8%89%E6%95%B0%E4%B9%8B%E5%92%8C.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
+1. 排序 + 左右指针  
+2. 过滤重复值：基准值判断前一个元素是否重复、左右指针判断下一个元素是否重复
 
 ```python
 class Solution:
     def threeSum(self, nums: List[int]) -> List[List[int]]:
         result = []
         nums.sort()
-        for i in range(len(nums)-2): # 0~n-3  必须三个数
+        for i in range(len(nums)-2): # 必须三个数
             # # 第二个元素开始 判断当前元素与之前元素重复则跳过
-            if i > 0 and nums[i] == nums[i - 1]:
+            if i > 0 and nums[i] == nums[i-1]:
                 continue
                 
             left，right = i + 1，len(nums) - 1
@@ -29,7 +30,6 @@ class Solution:
                     right -= 1
                 else:
                     result.append([nums[i], nums[left], nums[right]]) # 记录一组解
-                    
                     # 两者都判断下一个元素，过滤相同解
                     while left<right and nums[right] == nums[right-1]:
                         right -= 1
@@ -40,8 +40,6 @@ class Solution:
                     left += 1
         return result
 ```
-
-
 
 ### 2. 接雨水
 
@@ -72,8 +70,6 @@ class Solution:
         return count
 ```
 
-
-
 ### 3. 数组中的第K个最大元素
 
 ```python
@@ -85,7 +81,7 @@ def findKthLargest(nums, k):
         left,right=2*i+1,2*i+2 # 左右孩子
         if left>=length and right>=length:  # 没有孩子，属于叶子结点
             return 
-				
+	
         # 合理区间内最大值下标  判断是否需要交换
         largest=i
         if left<length and nums[largest]<nums[left]:  
@@ -192,7 +188,7 @@ return result
 
 ### 背包问题
 
-#### 1. 分割等和子集（01背包、正好装满）
+#### 1. 分割等和子集（01背包组合问题、正好装满）
 
 - dp定义：dp[i] 用nums数组的元素组合，使得恰好等于容量i   False装不成  True正好装满
 - 递推公式  dp[i] 当背包容量大于物品j的容量nums[j]时  验证dp[i] or dp[i-nums[j]]
@@ -214,11 +210,11 @@ for i in range(len(nums)): # 先物品  i下标0~n-1
 return dp[target]
 ```
 
-#### 2. 单词拆分（完全背包、正好装满、求排列）
+#### 2. 单词拆分（完全背包排列问题、正好装满）
 
 [Links](https://www.programmercarl.com/0139.%E5%8D%95%E8%AF%8D%E6%8B%86%E5%88%86.html)  单词列表是否能拼出字符串（完全背包）
 
-1. 定义  dp[i] 字符串前i个元素（下标从0~i-1）能否拼出， False拼不出 True能拼出。0表示空，下标1~n对应元素s[i-1] 
+1. 定义  dp[i] 字符串前i个元素（下标从0~i-1）能否拼出， False拼不出 True能拼出。0表示空，下标ii对应元素s[i-1] 
 
 2. 递推公式  dp[i] 依赖于  0<=j<i  dp[j]=True 且s[j:i]出现在wordDict，则dp[i]=True
 
@@ -226,7 +222,7 @@ return dp[target]
    
 3. 初始化   dp[0]=True
 
-4. 顺序    求排列，故顺序特殊  先背包后物品
+4. 顺序    排列顺序特殊  先背包后物品
 
 ```python
 dp=[False] *(len(s)+1) # dp[i] 表示字符串的前 i 个字符是否可以被拆分成单词
@@ -353,12 +349,12 @@ class Solution:
 
 [Links](https://www.programmercarl.com/1143.%E6%9C%80%E9%95%BF%E5%85%AC%E5%85%B1%E5%AD%90%E5%BA%8F%E5%88%97.html)
 
-1. dp定义：dp[i] [j]   text1前i个字符，text2前j个字符的最长公共子序列   
+1. dp定义：`dp[i][j]`   text1前i个字符，text2前j个字符的最长公共子序列   
    - 0代表空字符串    i下标1~n，对应元素text[i-1]
    
 2. 递推公式：
-   - text1[i-1] 与 text2[j-1] 当前字符相同，则dp[i] [j] = dp[i - 1] [j - 1] + 1
-   - text1[i-1] 与 text2[ j-1]当前字符不同，则dp[i] [j] = max(dp[i - 1] [j], dp[i] [j - 1])
+   - text1[i-1] 与 text2[j-1] 当前字符相同，则`dp[i][j] = dp[i-1] [j-1]+1`
+   - text1[i-1] 与 text2[ j-1]当前字符不同，则`dp[i][j] = max(dp[i-1][j], dp[i][j-1])`
    
 3. 初始化：第一行 第一列都为空
 
@@ -390,21 +386,19 @@ class Solution:
 [Links](https://www.programmercarl.com/0300.%E6%9C%80%E9%95%BF%E4%B8%8A%E5%8D%87%E5%AD%90%E5%BA%8F%E5%88%97.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
 1. dp定义: dp[i]表示**以第i个元素结尾**的最长递增子序列的长度。 i取值0~n-1，对应元素nums[i]
-2. 递推公式：dp[i]依赖  nums[i]>nums[j]时max(dp[i],dp[j]+1)    j取值0~i-1
+2. 递推公式：dp[i]依赖  `nums[i]>nums[j]`时`max(dp[i],dp[j]+1)`    j取值0~i-1
 3. 初始化：每一个i，dp[i]起始大小至少都是1
 
 ```python
-class Solution:
-    def lengthOfLIS(self, nums: List[int]) -> int:
-        if len(nums) <= 1:
-            return len(nums)
-        dp = [1] * len(nums) # i取值0~n-1
-        dp[0]=1 #初始化
-        for i in range(1, len(nums)): # 从第二个开始看递增子序列  范围1~n-1
-            for j in range(i): # j取值0~i-1
-                if nums[i] > nums[j]: # 大于才有机会
-                    dp[i] = max(dp[i], dp[j] + 1)    
-        return max(dp)
+if len(nums) <= 1:
+    return len(nums)
+dp = [1] * len(nums) # i取值0~n-1
+dp[0]=1 #初始化
+for i in range(1, len(nums)): # 从第二个开始看递增子序列  范围1~n-1
+    for j in range(i): # j取值0~i-1
+        if nums[i] > nums[j]: # 大于才有机会更大
+            dp[i] = max(dp[i], dp[j] + 1)    
+return max(dp)
 ```
 
 ## Todo
