旋转排序数组OK

--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -189,9 +189,13 @@ xxx
 
 ## 回溯
 
-### 1. 电话号码的字母组合
+### 1. 电话号码的字母组合（组合问题）
 
 思路：横向遍历 单个数字对应的字母集合，纵向遍历 didigits的N个数字
+
+### 2. 组合总和
+
+candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。（）
 
 ## 贪心
 
