--- a/解题方法论.md
+++ b/解题方法论.md
@@ -34,7 +34,7 @@ def binary_search(nums, target):
     return -1 # 如果没有，left指向目标被插入的位置
 ```
 
-##### 2. 寻找目标值的左右边界
+##### 2. 查找目标值的左右边界
 ```python
 # 在排序数组中查找元素的第一个和最后一个位置下标，即寻找左侧边界 和 右边界
 def search(nums, target) -> int:
@@ -68,28 +68,57 @@ def search(nums, target) -> int:
 ```
 
 
-##### 3. 旋转排序数组❓
+##### 3. 旋转排序数组
 
-[4, 5, 6, 7, 0, 1, 2]
+[4, 5, 6, 7, 0, 1, 2] 无重复元素
 
-- 搜索目标值：根据左右区间的有序性和目标值范围调整指针
+###### （1）查找目标值
 
-  比较==左端点left==和==中点mid==
+思路：先判断左右区间有序，再判断目标值位于哪个区间。 
 
-  1. 判断哪个区间有序或已达边界   
-  2. 判断是否在有序区间内，否则在无序区间。无法判断则left+1继续
-     1. nums[left] <  nums[mid]     
-     2. nums[left] >   nums[mid]  
-     3. nums[left] ==   nums[mid]  到达左边界，无法判断。left+=1
+1. 根据==左端点left==和==中点mid==，先判断左右区间有序，
+2. 再判断目标值是否在有序区间，无法判断则left+1继续查找
 
-- 寻找最小值：
+```python
+left,right=0,len(nums)-1
+while left<=right: # 等于也要比 边界
+    mid= (left+right)//2
+    # 找到目标值，停止
+    if nums[mid]==target:
+        return mid
 
-  思路：只需比较中点mid与==右端点right==
+    if nums[left]<nums[mid]:  # 左区间有序  右区间无序
+        if nums[left]<=target<nums[mid]: 
+            right=mid-1
+        else:
+            left=mid+1
+    elif nums[left]>nums[mid]: #左区间无序 右区间有序
+        if nums[mid]<target<=nums[right]:
+            left=mid+1
+        else:
+            right=mid-1
+    elif nums[left]==nums[mid]:
+        # 移到左边边界,继续查找
+        left+=1 
+return -1
+```
 
-  1. mid >right, 最小值在右区间
-  2. mid<=right  最小值在左区间或中点
+###### （2）寻找最小值
 
-  
+思路：（1）比较==中点mid==与==右端点right==     核心是找无序区间旋转点（2）持续更新min_value
+
+```python
+left,right=0,len(nums)-1
+min_value=float("inf") # 记录最小值
+while left<=right:
+    mid=(left+right)//2
+    min_value = min(min_value,nums[mid])  # mid持续记录
+    if nums[mid]>nums[right]: # 右边界无序
+        left=mid+1
+    elif nums[mid]<=nums[right]: # 左边界无序
+        right=mid-1
+return min_value
+```
 
 ### 3. 排序算法
 
