--- a/解题方法论.md
+++ b/解题方法论.md
@@ -6,21 +6,21 @@
 
 - 前缀和：明确定义，即是否包含当前元素、遍历的范围
 
-- 哈希表 {前缀和：出现次数}，初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
+- 哈希表 {前缀和 : 出现次数}，初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
 
 ### 2. 查找算法
 
 #### 二分查找（双闭区间）
 
 - 时间复杂度O(logn)     
-- 如果没有，**left**指向目标被插入的位置
+- 如果没找到，==left==指向目标即将插入的位置
 
 ##### 1. 查找目标值
 
 ```python
 def binary_search(nums, target):
     left, right = 0, len(nums) - 1 # 循环不变量 双闭区间
-    while left <= right: # 双闭区间左右边界也要比较 
+    while left <= right: # 边界也要比 
         mid = (left + right) // 2
         # 必须列出所有情况
         if nums[mid] < target: 
@@ -33,12 +33,14 @@ def binary_search(nums, target):
 ```
 
 ##### 2. 查找目标值的左右边界
+
+==借助变量== 持续更新结果
+
 ```python
-# 在排序数组中查找元素的第一个和最后一个位置下标，即寻找左侧边界 和 右边界
 def search(nums, target) -> int:
     # ------左边界------
     left,right=0,len(nums)-1 
-    final_left=-1 # 记录结果，持续更新
+    final_left=-1 
     while left<=right:
         mid=(left+right)//2
         if nums[mid]>target:
@@ -46,8 +48,8 @@ def search(nums, target) -> int:
         elif nums[mid]<target:
             left=mid+1
         elif nums[mid]==target:
-            final_left=mid 
-            right=mid-1  # 寻找左边界 要收缩右边界，唯一区别
+            final_left=mid  # 更新结果
+            right=mid-1     # 寻找左边界，收缩右边界
       
     # ------右边界------
     left,right=0,len(nums)-1 
@@ -60,9 +62,9 @@ def search(nums, target) -> int:
             left=mid+1
         elif nums[mid]==target:
             final_right=mid
-            left=mid+1  # 寻找右边界  就要收缩左边界，唯一区别
+            left=mid+1  # 寻找右边界，收缩左边界（唯一区别）
        
-    return [final_left,final_right] # 找不到返回[-1,-1]
+    return [final_left,final_right] 
 ```
 
 
@@ -145,11 +147,6 @@ def swap(nums, left, right):
     nums[left], nums[i] = nums[i], nums[left] # 基准元素交换到对应位置，返回基准元素所在下标
     return i
 def quicksort(nums, left, right):
-    """
-    :param nums: 待排序的数组
-    :param left: 排序的起始索引
-    :param right: 排序的结束索引
-    """
     # 终止条件  等号不需要排序
     if left >= right:
       	return 
