--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -797,9 +797,9 @@ return result
 
 ------
 
-暂时不看
+以下内容暂时不看
 
-## 分治法
+分治法
 
 ​	1.	**分解**：将问题分解为若干规模较小的子问题。
 
@@ -807,14 +807,14 @@ return result
 
 ​	3.	**合并**：将子问题的解组合成原问题的解（如果需要）。
 
-### 1. 20个球怎么用天平找到轻的那个？
+1. 20个球怎么用天平找到轻的那个？
 
 思路
 
 - **分组优化**：分三组最大化利用天平三种状态（左轻、右轻、平衡），相当于有效划分子问题。
 - **问题规模缩减**：分法比二分法更高效，每次称重将规模缩减至三分之一。
 
-### 2.  100层楼和两个球，最少的次数验证到哪一层楼球会碎掉？
+2.  100层楼和两个球，最少的次数验证到哪一层楼球会碎掉？
 
 思路
 
