--- a/解题方法论.md
+++ b/解题方法论.md
@@ -32,7 +32,10 @@ def binary_search(nums, target):
     return -1 # 如果没有，left指向目标被插入的位置
 ```
 
-##### 2. 查找目标值的左右边界
+##### 2. 查找目标值的左右边界 
+
+- 题目1：找左右边界
+- 题目2：一个数字在升序数组中出现的次数     思路：右边界-左边界+1
 
 ==借助变量== 持续更新结果
 
@@ -67,8 +70,11 @@ def search(nums, target) -> int:
     return [final_left,final_right] 
 ```
 
+##### 3. 两个数组合并后的中位数❓ 比较复杂
 
-##### 3. 旋转排序数组
+思路：按照小数组、大数组 顺序，映射下标进行二分查找
+
+##### 4. 旋转排序数组
 
 [4, 5, 6, 7, 0, 1, 2] 无重复元素
 
@@ -138,9 +144,9 @@ def swap(nums, left, right):
    i,j=left,right
    base = nums[left]
    while i<j: # 等号无需交换
-      while i < j and nums[i] <= base: # 左指针找到第一个大于基准的元素，准备交换
+      while i < j and nums[i] <= base: # 左指针找到第一个大于基准的元素
          i += 1
-      while i < j and base <= nums[j]: # 右指针找到第一个小于基准的元素，准备交换  
+      while i < j and base <= nums[j]: # 右指针找到第一个小于基准的元素 
          j -= 1
       if i < j: # 下标每次变动，都要判断
       	 nums[i], nums[j] = nums[j], nums[i] 
@@ -157,6 +163,8 @@ def quicksort(nums, left, right):
 ```
 
 #### 堆排序Heap
+
+- 题目：查找数组第K大的元素
 
 [堆排序 核心思想](https://www.hello-algo.com/chapter_heap/heap/#3)  搞懂「堆化」、「建堆」和「出堆」的过程。 整体流程如下：
 
@@ -185,9 +193,6 @@ def quicksort(nums, left, right):
 
 - tips:  大小顶堆唯一区别是堆化时比较当前节点 > or <孩子。 
 
-
-详见 [高频题-查找数组第K大的元素](高频题.md)
-
 ### 4. 滑动窗口（左闭右开）
 
 #### 滑动窗口明确三个事
@@ -208,7 +213,7 @@ def quicksort(nums, left, right):
 
 2. 遍历字符串 `right<len(s)`   right是即将遍历的下标
 
-   （1）判断当前元素，是否更新窗口、标识符，同时扩大右边界
+   （1）判断当前元素，是否更新窗口内容、标识符、右边界
 
    （2）判断当前元素，是否收缩窗口
 
@@ -216,7 +221,7 @@ def quicksort(nums, left, right):
 
    ​		 动态窗口  合法区间内满足子串条件  `while left<right and valid==len(need.keys())`
 
-   （3）收缩两步骤  （a）记录当前结果（b）左侧窗口移出元素，同时缩小左边界
+   （3）收缩两步骤  （a）记录当前结果（b）更新标识符、窗口内容、左边界
 
 ```python
 # 最小覆盖子串  
@@ -272,6 +277,24 @@ def minWindow(self, s: str, t: str) -> str:
 # 1. 什么时候扩大窗口？ 每步都在扩大
 # 2. 什么时候收缩窗口？ 窗口内都是不重复元素，如果当前右侧元素在窗口内出现重复值，一直收缩左侧元素直到窗口内不重复
 # 3. 什么时候更新结果？ 收缩完记录结果
+
+# 窗口参数
+window = set()  # 用于记录当前窗口的字符
+left, right = 0, 0  # 窗口为左闭右开 [left, right)
+max_length = 0  # 记录最大长度
+while right < len(s):  # 右边界移动范围是 0 到 n-1
+    char = s[right]
+    # 如果当前字符在窗口中，则收缩左边界
+    while char in window:
+        window.remove(s[left])
+        left += 1
+    # 将当前字符加入窗口
+    window.add(char)
+    # 更新最大长度
+    max_length = max(max_length, right - left + 1)
+    # 扩大右边界
+    right += 1
+return max_length
 ```
 
 
@@ -289,7 +312,7 @@ result = [0] * len(nums)  # 根据题目初始化结果
 stack = []  # 栈存下标
 
 for i in range(nums): 
-    while stack and <当前元素与栈顶元素满足条件>:
+    while stack and <当前元素与栈顶元素比较>:
         idx = stack.pop()  # 弹出
         result[idx] = <根据题目更新结果>
     stack.append(i)  # 当前元素入栈
@@ -407,9 +430,8 @@ class Solution:
 
 #### [层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
 
-1. 初始化队列 ,装入根节点
-2. 遍历当前层节点
-3. 记录当前节点，同时装入对应左右孩子
+1. 初始化队列deque ,装入根节点
+2. 遍历当前层，记录节点并装入左右孩子
 4. 装入当前层所有节点值
 
 ```python
@@ -429,8 +451,7 @@ class Solution:
         while dq: # 1. 遍历每一层
             # 2. 遍历当前层的节点   长度划分出当前层的元素个数，for pop遍历并清空当前层元素
             level = [] 
-            nums=len(dq) # queue动态变化，先统计长度
-            for _ in range(nums): 
+            for _ in range(len(dq) ): 
                 cur_node = dq.popleft() 
                 level.append(cur_node.val)
                 # 3. 装入左右子树
@@ -450,7 +471,7 @@ class Solution:
 
    - 全局参数：path存放结果，result存放结果集
 
-   - 局部参数：求组合用startIndex，求排列用used
+   - 局部参数：求排列用used，其余用used
 
 2. 确定终止条件    保存结果**必须复制**
    - 子集：`startIndex == len(nums)` 遍历完
@@ -462,7 +483,7 @@ class Solution:
 
 ### 2. 应用
 
-### （1）子集  startIndex，先记录结果再终止条件
+### （1）子集
 
 ```python
 # leetcode78 给定数组，返回所有可能的子集
@@ -482,7 +503,7 @@ return result
 
 [Links](https://www.programmercarl.com/0078.%E5%AD%90%E9%9B%86.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
 
-### （2）组合  startIndex
+### （2）组合  
 
 组合无序
 
@@ -501,23 +522,21 @@ backtracking(nums,startIndex)
 return result 
 ```
 
-### （3）切割  startIndex
+### （3）切割 
 
 - 如何模拟那些切割线？ 类似组合， startIndex代表切割线   
-- 终止条件？切完整个字符串,即**startIndex== len(s)**
+- 终止条件？切完,即**startIndex== len(s)**
 - 在递归循环中如何截取子串？s[ startIndex: i+1]代表下标startIndex~i  刚切出来，左闭右开
 
-见 高频题 分割回文串: 分割成子串，每个子串都是回文串
 
-[links](https://www.programmercarl.com/0131.%E5%88%86%E5%89%B2%E5%9B%9E%E6%96%87%E4%B8%B2.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
-### （4）排列  used，无startIndex
+### （4）排列
 
 排列有序，需要穷举元素的位置  用**used**标记还可以选择哪些元素
 
 ```python
 # leetcode46 全排列
-result,path=[],[] # 全局参数
+result,path,used=[],[],[False]*len(nums)  # 全局参数
 def backtrack(nums,used):
     # 终止条件
     if len(path)==len(nums):
@@ -533,7 +552,7 @@ def backtrack(nums,used):
             backtrack(nums,used) # 纵向每次遍历整个数组，带着used
             path.pop()
             used[i]=False
-used=[False]*len(nums) 
+
 backtrack(nums,used) # 求排列有序 跳过已使用过的元素
 return result
 ```
@@ -547,7 +566,7 @@ return result
 
 ### 1. 动态规划5步骤
 
-1. dp下标定义⭐️⭐️⭐️       明确下标 i 取值范围、总长度，以及对应元素的取值范围
+1. dp下标定义⭐️⭐️⭐️       明确下标 i 取值范围、总长度、对应值
 
 2. 递推公式      更新依赖于哪些变量
 
@@ -599,7 +618,7 @@ return result
 
 #### （3）应用场景
 
-##### 1. 只取一次的背包最大价值
+##### 1. 01背包最大价值
 
 ```python
 # ===========二维dp===========
@@ -618,7 +637,7 @@ for i in range(n): # 先物品
              dp[j] = max(dp[j], dp[j - weight[i]] + value[i]) # 每次状态不会和之前重合，保证物品i只被放入一次。
 ```
 
-##### 2. 背包是否刚好装满
+##### 2. 01背包是否刚好装满
 
 [分割等和子集](https://www.programmercarl.com/0416.%E5%88%86%E5%89%B2%E7%AD%89%E5%92%8C%E5%AD%90%E9%9B%86.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)   正好凑出sum/2    求组合 
 
