--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -551,13 +551,25 @@ dp[i]= max(dp[i-2]+nums[i], dp[i-1])
 
 #### ⭐️1. 完全平方数：和为 n 的完全平方数的最少数量 。例如13 = 2²+3²
 
-思路：完全背包、正好装满
+思路：完全背包、最少数量
 
 背包容量是n， 物品是i  取值范围是0~√n
 
 1. dp[i]定义  和为i的最少数量
-2. 公式  `dp[i]=min(dp[i-j²], dp[i])`    j取值范围0~√i
+2. 公式  `dp[j]=min(dp[j-i²], dp[j])`    i取值范围`1~√n`
 3. 初始化  `dp[0]=0`  为求最小值，故dp初始化为无穷大
+
+```python
+dp = [float('inf')] * (n + 1)
+dp[0] = 0
+for i in range(1, int(n ** 0.5) + 1):  # 先物品 1~根号n
+    for j in range(i * i, n + 1):  # 后背包
+        # 更新凑成数字 j 所需的最少完全平方数数量
+        dp[j] = min(dp[j-i*i]+1, dp[j])
+return dp[n]
+```
+
+
 
 #### 2. 分割等和子集（01背包组合问题、正好装满）
 
