--- a/解题方法论.md
+++ b/解题方法论.md
@@ -468,25 +468,25 @@ class Solution:
 ### 1. 回溯三步骤
 
 1. 确定传参
+2. 确定终止条件 
+3. 单层逻辑   **明确 **横向for遍历什么、递归纵向遍历什么
 
-   - 全局参数：path存放结果，result存放结果集
+|      | 局部参数   | 终止条件             | 横向                                                    | 纵向（完全一致）           |
+| ---- | ---------- | -------------------- | ------------------------------------------------------- | -------------------------- |
+| 子集 | startIndex | startIndex==len(s)   | range(startIndex, len(nums))                            | backtrack(nums,startIndex) |
+| 组合 | startIndex | Len(path)==len(nums) | range(startIndex,len(nums))  i重复取   i+1不重复        | backtrack(nums,startIndex) |
+| 分割 | startIndex | startIndex==len(s)   | range(startIndex, len(s)) 切出的子串`s[startIndex:i+1]` | backtrack(s,startIndex)    |
+| 排列 | used       | len(path)==len(nums) | range(**len(nums)**)  每次都是全遍历                    | backtrack(nums,used)       |
 
-   - 局部参数：求排列用used，其余用used
-
-2. 确定终止条件    保存结果**必须复制**
-   - 子集：`startIndex == len(nums)` 遍历完
-   - 组合： startIndex  `len(path)==len(nums)`  
-   - 切割：`startIndex == len(nums)` 遍历完
-   - 排列：`used`     满足 `len(path)==len(nums)`  
-
-3. 遍历时必须**明确**for横向遍历什么和取值范围    纵向递归遍历什么和取值范围    path存的什么）
+- 全局参数path存放结果，result存放结果集
+-  保存结果**必须复制**
 
 ### 2. 应用
 
 ### （1）子集
 
 ```python
-# leetcode78 给定数组，返回所有可能的子集
+# leetcode78 返回所有可能的子集
 result，path = [],[] # 全局参数
 def backtracking(nums,startIndex):
     result.append(path.copy())  # 记录结果，前序位置每个节点的值都是一个子集
@@ -524,11 +524,8 @@ return result
 
 ### （3）切割 
 
-- 如何模拟那些切割线？ 类似组合， startIndex代表切割线   
-- 终止条件？切完,即**startIndex== len(s)**
+- 如何模拟那些切割线？  startIndex代表切割线   
 - 在递归循环中如何截取子串？s[ startIndex: i+1]代表下标startIndex~i  刚切出来，左闭右开
-
-
 
 ### （4）排列
 
@@ -553,7 +550,7 @@ def backtrack(nums,used):
             path.pop()
             used[i]=False
 
-backtrack(nums,used) # 求排列有序 跳过已使用过的元素
+backtrack(nums,used) 
 return result
 ```
 
