--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -565,7 +565,7 @@ dp[0] = 0
 for i in range(1, int(n ** 0.5) + 1):  # 先物品 1~根号n
     for j in range(i * i, n + 1):  # 后背包
         # 更新凑成数字 j 所需的最少完全平方数数量
-        dp[j] = min(dp[j-i*i]+1, dp[j])
+        dp[j] = min(dp[j],dp[j-i*i]+1)
 return dp[n]
 ```
 
@@ -590,10 +590,8 @@ dp=[False]* (target+1) # 0代表空背包  下标从1~n代表容量 全部初始
 
 dp[0]=True
 for i in range(len(nums)): # 先物品  i下标0~n-1
-    for j in range(target,0,-1): # 再背包  j下标n~1  01背包内层倒序
-        # 如果背包容量大于物品，则才有变化
-        if j >=nums[i]:
-            dp[j]= dp[j] or dp[j-nums[i]]
+    for j in range(target,nums[i]-1,-1): # 再背包  j下标n~1  01背包内层倒序
+        dp[j]= dp[j] or dp[j-nums[i]]
 return dp[target]
 ```
 
