--- a/解题方法论.md
+++ b/解题方法论.md
@@ -702,5 +702,4 @@ for i in range(n):  # 先物品 取值范围0~n-1
 return -1 if dp[amount]==float("inf") else dp[amount]
 ```
 
-
-
+![image-20241229下午55957260](./assets/image-20241229下午55957260.png)
