--- a/解题方法论.md
+++ b/解题方法论.md
@@ -471,12 +471,12 @@ class Solution:
 2. 确定终止条件 
 3. 单层逻辑   **明确 **横向for遍历什么、递归纵向遍历什么
 
-|      | 局部参数   | 终止条件             | 横向                                                    | 纵向（完全一致）           |
+|      | 局部参数   | 终止条件             | 横向                                                    | 纵向（==完全一致==）       |
 | ---- | ---------- | -------------------- | ------------------------------------------------------- | -------------------------- |
 | 子集 | startIndex | startIndex==len(s)   | range(startIndex, len(nums))                            | backtrack(nums,startIndex) |
 | 组合 | startIndex | Len(path)==len(nums) | range(startIndex,len(nums))  i重复取   i+1不重复        | backtrack(nums,startIndex) |
 | 分割 | startIndex | startIndex==len(s)   | range(startIndex, len(s)) 切出的子串`s[startIndex:i+1]` | backtrack(s,startIndex)    |
-| 排列 | used       | len(path)==len(nums) | range(**len(nums)**)  每次都是全遍历                    | backtrack(nums,used)       |
+| 排列 | used       | len(path)==len(nums) | range(==len(nums)==)  每次全遍历                        | backtrack(nums,used)       |
 
 - 全局参数path存放结果，result存放结果集
 -  保存结果**必须复制**
@@ -563,146 +563,25 @@ return result
 
 ### 1. 动态规划5步骤
 
-1. dp下标定义⭐️⭐️⭐️       明确下标 i 取值范围、总长度、对应值
+1. dp下标定义⭐️       明确下标 i 取值范围、总长度、对应值
 
-2. 递推公式      更新依赖于哪些变量
+2. 递推公式      更新依赖于哪些
 
 3. 初始化
 
-4. 遍历顺序     先物后背（谐音**吾辈**当自强）       ==特例是排列==先物品后背包
+4. 遍历顺序    
 
 5. 举例推导数组    
 
-- 背包问题tips：
-  - 背包容量从0开始
-  - 一维dp    01背包时内层倒序，避免重复；完全背包时内层正序，需要重复。
-
-
-
-![image-20241229下午60459786](./assets/image-20241229下午60459786.png)
-
-### 2. 01背包
+### 2. 背包问题
 
 <img src="assets/image-20241211001418031.png" alt="image-20241211001418031" style="zoom:30%;" />
 
-#### （1）[二维dp](https://www.programmercarl.com/%E8%83%8C%E5%8C%85%E7%90%86%E8%AE%BA%E5%9F%BA%E7%A1%8001%E8%83%8C%E5%8C%85-1.html)
-1. dp 定义：dp[i] [j]从前i个物品中任取，放入容量为j的背包的最大价值。
-2. 递推公式
+1. 背包容量从==0==开始
+2. 明确3个问题   01背包or完全背包、组合or排列、具体子问题
 
+![image-20241230下午90939607](./assets/image-20241230下午90939607.png)
 
-3. 初始化：填充第一行、第一列
+### 3. 子序列问题
 
-   ```python
-   # 初始化  背包从容量0开始填充，故+1   物品不变
-   dp = [[0] * (capacity + 1) for _ in range(n)]
-   for j in range(weight[0], capacity + 1):
-       dp[0][j] = value[0]
-   ```
-
-
-#### （2）[一维dp](https://www.programmercarl.com/%E8%83%8C%E5%8C%85%E7%90%86%E8%AE%BA%E5%9F%BA%E7%A1%8001%E8%83%8C%E5%8C%85-2.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
-
-1. dp定义:  dp[j] 容量为j的背包，所背的物品最大价值
-
-2. 递推公式:   不放物品i和放物品i两种情况
-
-   ```python
-   dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
-   ```
-
-3. 初始化
-
-   ```python
-   dp = [0] * (capacity + 1)  # 初始值为0，背包容量从0开始，故+1
-   dp[0] = 0  # 背包容量为0，最大价值为0
-   ```
-
-#### （3）应用场景
-
-##### 1. 01背包最大价值
-
-```python
-# ===========二维dp===========
-for i in range(1, n):  # 先物品  物品0已填充,后续取值范围1~n-1 
-    for j in range(capacity + 1):  # 后背包  取值范围 空背包0~满背包n
-        if j >= weights[i]: 
-          	dp[i][j] = max(dp[i-1][j], dp[i-1][j-weights[i]] + values[i])
-        else: 
-            dp[i][j] = dp[i-1][j]
-     
-    
-# ===========一维dp===========
-for i in range(n): # 先物品
-    for j in range(capacity, 0, -1):  # 后背包 逆序
-      	if j>=weight[i]:
-             dp[j] = max(dp[j], dp[j - weight[i]] + value[i]) # 每次状态不会和之前重合，保证物品i只被放入一次。
-```
-
-##### 2. 01背包是否刚好装满
-
-[分割等和子集](https://www.programmercarl.com/0416.%E5%88%86%E5%89%B2%E7%AD%89%E5%92%8C%E5%AD%90%E9%9B%86.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)   正好凑出sum/2    求组合 
-
-```python
-total_sum = sum(nums)
-if total_sum % 2 != 0: # 总和的一半 能被2整除
-    return False
-
-target_sum = total_sum // 2
-dp = [False] * (target_sum + 1) 
-dp[0] = True
-
-for num in nums: # 先物品
-    for i in range(target_sum, 0, -1): # 后背包 逆序
-        # 判断背包容量是否装入物品
-        if i>=num:
-        		dp[i] = dp[i] or dp[i - num]
-return dp[target_sum]
-
-```
-
-### 3. 完全背包
-
-唯一区别  **内层正序遍历**，保证物品重复取
-
-##### 1. 无限取的背包最大价值
-
-```python
-dp = [0] * (bagWeight + 1)
-for i in range(len(weight)):  # 物品
-    for j in range(weight[i], bagWeight + 1):  #背包容量  取值范围 物品i重量~背包容量
-        dp[j] = max(dp[j], dp[j - weight[i]] + value[i])
-```
-
-##### 2. 求组合无序，例零钱兑换
-
-##### 3. 求排列有序，例 爬楼梯有几种方法
-
- 爬楼梯进阶： n 阶台阶，每次爬m (1 <= m < n)，有多少种不同的方法？
-
-​	**唯一特例 先背包后物品** （背包容量的每一个值，都是经过 物品a 和 b 的计算，包含了{a, b} 和 {b, a}两种情况）
-
-```python
-# 递推公式  dp[j]依赖于dp[j-1]，dp[j-2]，dp[j-3]等，即dp[j-i]
-dp = [0]*(n+1) # 背包总容量
-dp[0] = 1 
-
-for j in range(1,n+1): # 先背包  
-    for i in range(1,m+1): # 后物品
-        if j>=i:
-            dp[j] += dp[j-i] # 这里i就是重量而非index
-return dp[n]
-```
-
-##### 4. 无限取物品，求背包装满最小物品数
-
-```python
-dp = [float('inf')] * (amount + 1)   # 求最小，故初始值无穷大
-dp[0]=0 # 容量为0，则最小物品数为0
-
-for i in range(n):  # 先物品 取值范围0~n-1
-    for j in range(1, target + 1):  # 后背包   取值范围1~背包容量
-        if j >= coins[i]:  # 物品i能装入
-            dp[j] = min( dp[j]，dp[j - coins[i]] + 1)
-return -1 if dp[amount]==float("inf") else dp[amount]
-```
-
+1. 子序列从==空字符==开始
