--- a/解题方法论.md
+++ b/解题方法论.md
@@ -70,13 +70,14 @@ def search(nums, target) -> int:
     return [final_left,final_right] 
 ```
 
-##### 3. 两个数组合并后的中位数❓ 比较复杂
-
-思路：按照小数组、大数组 顺序，映射下标进行二分查找
-
-##### 4. 旋转排序数组
+##### 3. 旋转排序数组
 
 [4, 5, 6, 7, 0, 1, 2] 无重复元素
+
+|            | 比较      | 思路                                                 |
+| ---------- | --------- | ---------------------------------------------------- |
+| 查找目标值 | left  mid | 先判断左右区间有序，再判断目标值位于哪个区间         |
+| 查找最小值 | mid right | 旋转点一定在无序区间内，用变量min_value持续更新mid值 |
 
 ###### （1）查找目标值
 
@@ -109,9 +110,9 @@ while left<=right: # 等于也要比 边界
 return -1
 ```
 
-###### （2）寻找最小值
+###### （2）查找最小值
 
-思路：（1）比较==中点mid==与==右端点right==     核心是找无序区间旋转点（2）持续更新min_value
+思路：（1）比较==中点mid==与==右端点right==     核心是无序区间旋转点（2）持续更新min_value
 
 ```python
 left,right=0,len(nums)-1
@@ -125,6 +126,10 @@ while left<=right:
         right=mid-1
 return min_value
 ```
+
+##### 4. 两个数组合并后的中位数❓ 比较复杂
+
+思路：按照小数组、大数组 顺序，映射下标进行二分查找
 
 ### 3. 排序算法
 
@@ -195,12 +200,6 @@ def quicksort(nums, left, right):
 
 ### 4. 滑动窗口（左闭右开）
 
-#### 滑动窗口明确三个事
-
-- 什么时候扩大窗口？
-- 什么时候收缩窗口？
-- 什么时候更新答案？
-
 #### 1. 解题2步骤
 
 1. 初始化参数 
@@ -213,15 +212,15 @@ def quicksort(nums, left, right):
 
 2. 遍历字符串 `right<len(s)`   right是即将遍历的下标
 
-   （1）判断当前元素，是否更新窗口内容、标识符、右边界
+   （1）判断当前元素，是否更新==窗口参数==（windows、valid、right）
 
-   （2）判断当前元素，是否收缩窗口
+   （2）判断当前元素，是否==收缩窗口==
 
    ​	     固定窗口  窗口已满 `if right-left>= len(子串)`
 
    ​		 动态窗口  合法区间内满足子串条件  `while left<right and valid==len(need.keys())`
 
-   （3）收缩两步骤  （a）记录当前结果（b）更新标识符、窗口内容、左边界
+   （3）收缩两步骤  （a）记录结果（b）左边界元素是否更新窗口参数（valid、windows、left）
 
 ```python
 # 最小覆盖子串  
@@ -240,14 +239,13 @@ def minWindow(self, s: str, t: str) -> str:
     strat=0
     length=float("inf")
    
-    while right<len(s):  # right是待处理的索引，取值范围是0~n-1    此时窗口内范围是left~right-1
-        # 1. 判断当前元素 是否加入窗口,并更新标识符
+    while right<len(s):  # right值尚未加入窗口，取值范围是0~n-1 
+        # 1. 判断当前元素 
         char=s[right] 
         if char in need.keys():
             window[char] = window.get(char, 0) + 1
             if window[char] == need[char]:
                  valid += 1 
-				# 2. 扩大右边界
         right+=1
         
         # 3. 判断是否收缩窗口
@@ -297,15 +295,15 @@ while right < len(s):  # 右边界移动范围是 0 到 n-1
 return max_length
 ```
 
-
-
 ### 5. 单调栈
 
-#### 单调栈3步骤
+应用：找下一个更大/更小元素
 
-1. list模拟栈，明确 当前元素  和 栈顶元素 的`> < =`三种情况
-2. 无论栈怎么改变，当前元素都要入栈
-3. 栈 存放元素下标
+#### 1. 单调栈3步骤  
+
+1. 明确 当前元素  和 栈顶元素 的`> < =`三种情况
+2. 当前元素最后要入栈
+3. 栈存放元素下标
 
 ```python
 result = [0] * len(nums)  # 根据题目初始化结果
@@ -316,11 +314,8 @@ for i in range(nums):
         idx = stack.pop()  # 弹出
         result[idx] = <根据题目更新结果>
     stack.append(i)  # 当前元素入栈
-
 return result
 ```
-
-
 
 ## 链表
 
@@ -431,7 +426,7 @@ class Solution:
 #### [层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
 
 1. 初始化队列deque ,装入根节点
-2. 遍历当前层，记录节点并装入左右孩子
+2. 遍历当前层，记录并装入左右孩子
 4. 装入当前层所有节点值
 
 ```python
@@ -471,15 +466,15 @@ class Solution:
 2. 确定终止条件 
 3. 单层逻辑   **明确 **横向for遍历什么、递归纵向遍历什么
 
-|      | 局部参数   | 终止条件             | 横向                                                    | 纵向（==完全一致==）       |
-| ---- | ---------- | -------------------- | ------------------------------------------------------- | -------------------------- |
-| 子集 | startIndex | startIndex==len(s)   | range(startIndex, len(nums))                            | backtrack(nums,startIndex) |
-| 组合 | startIndex | Len(path)==len(nums) | range(startIndex,len(nums))  i重复取   i+1不重复        | backtrack(nums,startIndex) |
-| 分割 | startIndex | startIndex==len(s)   | range(startIndex, len(s)) 切出的子串`s[startIndex:i+1]` | backtrack(s,startIndex)    |
-| 排列 | used       | len(path)==len(nums) | range(==len(nums)==)  每次全遍历                        | backtrack(nums,used)       |
+|      | 局部参数                           | 终止条件                                  | 横向                                                         | 纵向                                          |
+| ---- | ---------------------------------- | ----------------------------------------- | ------------------------------------------------------------ | --------------------------------------------- |
+| 子集 | startIndex                         | startIndex==len(s) <br />先保存结果再终止 | range(startIndex, len(nums))                                 | backtrack(nums,i+1)                           |
+| 组合 | startIndex                         | len(path)==len(nums)                      | range(startIndex,len(nums))                                  | backtrack(nums,i+1) <br />i重复取   i+1不重复 |
+| 分割 | startIndex切割线                   | startIndex==len(s)                        | range(startIndex, len(s)) <br />切出的子串`s[startIndex:i+1]` | backtrack(s,i+1)                              |
+| 排列 | used  <br />False未访问 True已访问 | len(path)==len(nums)                      | range(len(nums))   ==全遍历==                                | backtrack(nums,==used==)                      |
 
-- 全局参数path存放结果，result存放结果集
--  保存结果**必须复制**
+- 全局参数：path存放结果，result存放结果集
+-  保存结果==必须复制==
 
 ### 2. 应用
 
@@ -503,9 +498,7 @@ return result
 
 [Links](https://www.programmercarl.com/0078.%E5%AD%90%E9%9B%86.html#%E5%85%B6%E4%BB%96%E8%AF%AD%E8%A8%80%E7%89%88%E6%9C%AC)
 
-### （2）组合  
-
-组合无序
+### （2）组合无序  
 
 ```python
 result，path = [],[] # 全局参数
@@ -515,7 +508,7 @@ def backtracking(nums,startIndex):
         return 
     for i in range(startIndex,len(nums)): # 横向遍历的起始位置
         path.append(nums[i])
-        backtrack(nums,i)  #递归 i控制纵向遍历位置，依赖于横向。i表示可重复,i+1不能重复取(画出N叉树就明白了)
+        backtrack(nums,i)  #递归 i依赖于横向，控制纵向。i表示可重复,i+1不能重复取(画出N叉树就明白了)
         path.pop()
 startIndex=0 
 backtracking(nums,startIndex)
@@ -524,12 +517,9 @@ return result
 
 ### （3）切割 
 
-- 如何模拟那些切割线？  startIndex代表切割线   
-- 在递归循环中如何截取子串？s[ startIndex: i+1]代表下标startIndex~i  刚切出来，左闭右开
+### （4）排列有序
 
-### （4）排列
-
-排列有序，需要穷举元素的位置  用**used**标记还可以选择哪些元素
+需要穷举元素的位置  用**used**标记还可以选择哪些元素
 
 ```python
 # leetcode46 全排列
@@ -556,7 +546,9 @@ return result
 
 ## 贪心
 
-1. 无套路，千题千法，故不要在意数学证明。 
+### 1. 无套路
+
+1. 千题千法，故不要在意数学证明。 
 2. 思路：想清楚局部最优，想清楚全局最优，感觉可以推出，且想不出反例
 
 ## 动态规划
@@ -578,9 +570,9 @@ return result
 <img src="assets/image-20241211001418031.png" alt="image-20241211001418031" style="zoom:30%;" />
 
 1. 背包容量从==0==开始
-2. 明确3个问题   01背包or完全背包、组合or排列、具体子问题
+2. 明确3个问题   01背包or完全背包、组合or排列、具体问题
 
-![image-20241230下午90939607](./assets/image-20241230下午90939607.png)
+![image-20250101下午62832654](./assets/image-20250101下午62832654.png)
 
 ### 3. 子序列问题
 
