--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -314,30 +314,28 @@ print(findKthLargest(nums, k))  # 输出应该是 5
 
 ```python
 stack=[] 
-cur_str="" # 存储已解码的字符串
+cur_strr="" # 存储已解码的字符串
 cur_num=0 # 存储即将解码的数字
 
 for char in s: # 4种可能
-    if char.isdigit(): # 连续数字
-        cur_num=cur_num*10+int(char)
+    if char.isdigit(): 
+        cur_num=cur_num*10+int(char) # 连续数字
     elif char=="[":
-        # 入栈  保存已解码的字符串 + 即将解码的数字
-        stack.append([cur_str,cur_num])
+        # 入栈  保存已解码字符串 + 即将解码的数字
+        stack.append([cur_strr,cur_num])
         # 清空
-        cur_str=""
+        cur_strr=""
         cur_num=0
     elif char =="]":
-        # 出栈
+        # 出栈解密
         pre_str,nums=stack.pop()
-        cur_str=pre_str+ cur_str*nums # 当前字符串是要重复的目标
+        cur_strr=pre_str+ cur_strr*nums # 当前字符串是要重复的目标
     else:
-        cur_str+=char # 字母
-return cur_str
+        cur_strr+=char # 字母
+return cur_strr
 ```
 
 ### （二）单调栈
-
-找下一个最大/最小值
 
 #### 1. 获取最小元素的栈
 
@@ -345,7 +343,23 @@ return cur_str
 
 #### 2. 每日温度
 
-pass
+```python
+stack=[0]
+result=[0]*len(temperatures)
+for i in range(1,len(temperatures)): 
+    # 当前元素  > 栈顶元素
+    if temperatures[i]>temperatures[stack[-1]]:
+        while len(stack)>0 and temperatures[i]>temperatures[stack[-1]]:
+            index=stack.pop()
+            result[index]=i-index
+        stack.append(i)
+    # 当前元素<=栈顶元素
+    elif temperatures[i]<=temperatures[stack[-1]]:
+        stack.append(i)
+return result
+```
+
+
 
 #### 3. 柱状图中最大的矩形❓
 
@@ -587,8 +601,8 @@ dp[i]= max(dp[i-2]+nums[i], dp[i-1])
 ```python
 dp = [float('inf')] * (n + 1)
 dp[0] = 0
-for i in range(1, int(n ** 0.5) + 1):  # 先物品 1~根号n
-    for j in range(i * i, n + 1):  # 后背包
+for i in range(int(n**0.5) + 1):  # 先物品 根号n
+    for j in range(i*i, n+1):  # 后背包
         # 更新凑成数字 j 所需的最少完全平方数数量
         dp[j] = min(dp[j],dp[j-i*i]+1)
 return dp[n]
