--- a/解题方法论.md
+++ b/解题方法论.md
@@ -302,20 +302,7 @@ return max_length
 #### 1. 单调栈3步骤  
 
 1. 明确 当前元素  和 栈顶元素 的`> < =`三种情况
-2. 当前元素最后要入栈
-3. 栈存放元素下标
-
-```python
-result = [0] * len(nums)  # 根据题目初始化结果
-stack = []  # 栈存下标
-
-for i in range(nums): 
-    while stack and <当前元素与栈顶元素比较>:
-        idx = stack.pop()  # 弹出
-        result[idx] = <根据题目更新结果>
-    stack.append(i)  # 当前元素入栈
-return result
-```
+2. 无论是否出栈，当前元素**下标**==最后必须入栈==
 
 ## 链表
 
