--- a/解题方法论.md
+++ b/解题方法论.md
@@ -559,7 +559,7 @@ return result
 1. 背包容量从==0==开始
 2. 明确3个问题   01背包or完全背包、组合or排列、具体问题
 
-![image-20250101下午62832654](./assets/image-20250101下午62832654.png)
+![image-20250101212751345](assets/image-20250101212751345.png)
 
 ### 3. 子序列问题
 
