--- a/解题方法论.md
+++ b/解题方法论.md
@@ -4,9 +4,7 @@
 
 ### 1. 前缀和、区间和
 
-- 前缀和：明确定义，即是否包含当前元素、遍历的范围
-
-- 哈希表 {前缀和 : 出现次数}，初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
+​	前缀和：==明确定义==，即是否包含当前元素、遍历的范围
 
 ### 2. 查找算法
 
@@ -29,7 +27,7 @@ def binary_search(nums, target):
             right = mid - 1 
         elif nums[mid] == target:
             return mid
-    return -1 # 如果没有，left指向目标被插入的位置
+    return -1 
 ```
 
 ##### 2. 查找目标值的左右边界 
@@ -127,10 +125,6 @@ while left<=right:
 return min_value
 ```
 
-##### 4. 两个数组合并后的中位数❓ 比较复杂
-
-思路：按照小数组、大数组 顺序，映射下标进行二分查找
-
 ### 3. 排序算法
 
 #### 快速排序QuickSort
@@ -197,6 +191,36 @@ def quicksort(nums, left, right):
    2.  堆长度-1，堆顶执行堆化
 
 - tips:  大小顶堆唯一区别是堆化时比较当前节点 > or <孩子。 
+
+#### 归并排序
+
+```python
+# 两个数组合并后的中位数   
+def merge_and_process(nums1, nums2):
+    """
+    合并两个有序数组，思路一样 合并两个有序链表
+    """
+    i, j = 0, 0
+    merged = []
+
+    # 合并两个有序数组
+    while i < len(nums1) and j < len(nums2):
+        if nums1[i] < nums2[j]:
+            merged.append(nums1[i])
+            i += 1
+        else:
+            merged.append(nums2[j])
+            j += 1
+    merged.extend(nums1[i:]) # nums1可能剩余，追加
+    merged.extend(nums2[j:])
+    n = len(merged)
+    if n % 2 == 1:
+        return merged[n // 2] #奇数长度
+    else:
+        return (merged[n//2-1] + merged[n//2])/2 # 偶数长度
+```
+
+
 
 ### 4. 滑动窗口（左闭右开）
 
@@ -282,7 +306,7 @@ left, right = 0, 0  # 窗口为左闭右开 [left, right)
 max_length = 0  # 记录最大长度
 while right < len(s):  # 右边界移动范围是 0 到 n-1
     char = s[right]
-    # 如果当前字符在窗口中，则收缩左边界
+    # 如果当前字符在窗口中，则收缩左边界  动态窗口
     while char in window:
         window.remove(s[left])
         left += 1
@@ -306,7 +330,7 @@ return max_length
 
 ## 链表
 
-核心解法：  （1）快慢指针  （2）虚拟头结点  
+核心解法：（1）快慢指针 （2）虚拟头结点  
 
 ### 1. 插入元素
 
@@ -378,7 +402,7 @@ def merge_two_lists(l1, l2):
 #### 递归三步骤
 
 1. 确定递归函数的参数和返回值
-2. 确定终止条件
+2. 确定终止条件  `node is None`
 3. 确定单层递归的逻辑
 
 ```python
@@ -557,7 +581,7 @@ return result
 <img src="assets/image-20241211001418031.png" alt="image-20241211001418031" style="zoom:30%;" />
 
 1. 背包容量从==0==开始
-2. 明确3个问题   01背包or完全背包、组合or排列、具体问题
+2. 明确3个问题   01背包or完全背包（确定正序or逆序）、组合or排列（确定顺序）、具体问题
 
 ![image-20250101212751345](assets/image-20250101212751345.png)
 
